Poorman : avoid a double free in ls method. Should fix #8617.

Signed-off-by: Matt Madia <mattmadia@gmail.com>